maven done, able to execute different textng.xml file from mvn cmd